@startuml ChatSystem Class Diagram

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam class {
    BackgroundColor #FFFFCC
    BorderColor #000000
    ArrowColor #000000
}

' Interfaces
interface Runnable {
    + run() : void
}

' ========== SERVER SIDE ==========
package "Server Side" #DDFFDD {
    class ChatServer {
        {static} - PORT : int = 5001
        {static} - clients : List<ClientHandler>
        {static} - serverSocket : SSLServerSocket
        {static} - clientThreadPool : ExecutorService
        {static} - MAX_CLIENTS : int = 50
        {static} - running : boolean
        --
        {static} + main(String[] args) : void
        {static} + addClient(ClientHandler) : void [synchronized]
        {static} + removeClient(ClientHandler) : void [synchronized]
        {static} + broadcast(String, ClientHandler) : void [thread-safe]
        {static} + broadcastAll(String) : void [thread-safe]
        {static} + broadcastFile(String, byte[], ClientHandler) : void [thread-safe]
        {static} + sendPrivateMessage(String, String, String, ClientHandler) : void [thread-safe]
        {static} + getClients() : List<ClientHandler>
        {static} + shutdown(boolean) : void
        - shutdownInstance() : void
    }

    class ClientHandler {
        - clientSocket : Socket
        - output : DataOutputStream
        - username : String
        {static} - formatter : DateTimeFormatter
        {static} - msgType_TEXT : byte = 1
        {static} - msgType_FILE : byte = 2
        --
        + ClientHandler(Socket)
        + run() : void
        + sendText(String) : void
        + sendFile(String, byte[]) : void
        + getUsername() : String
        + getClientSocket() : Socket
        {static} + getFormatter() : DateTimeFormatter
        + closeConnection() : void
    }
    
    class DatabaseManager {
        {static} - url : String
        --
        {static} + createNewTable() : void
        {static} + createUsersTable() : void
        {static} + insertMessage(String, String, String, String, String, String) : void
        {static} + getAllMessages(String) : ArrayList<String>
        {static} + registerUser(String, String) : boolean
        {static} + verifyPassword(String, String) : boolean
        {static} + userExists(String) : boolean
        {static} - hashPassword(String) : String
    }
    
    note right of ChatServer
      Main server that accepts
      client connections and
      manages message routing
      
      Thread Pool Architecture:
      - Fixed ExecutorService (50 threads)
      - Scalable client handling
      - Graceful shutdown with cleanup
      
      Thread-safe operations:
      - Synchronized client list access
      - Atomic username validation
      - Concurrent message broadcasting
    end note

    note right of ClientHandler
      Handles individual client
      connections via thread pool
      (ExecutorService workers)
      
      Features:
      - Password authentication on login
      - Username validation (no duplicates)
      - Atomic registration
      - Overflow protection for large files
      - Proper resource cleanup
      
      Authentication Commands:
      - CHECK_USER: verify if username exists
      - VERIFY_PASSWORD: authenticate user
      - REGISTER_PASSWORD: create new account
      
      Chat Commands:
      - /list: show users
      - /w <user> <msg>: private message
      - bye: disconnect
      
      Binary protocol:
      - msgType_TEXT (1): text messages
      - msgType_FILE (2): file transfers
      
      File size limit: 50MB
    end note
    
    note right of DatabaseManager
      Manages SQLite database
      for persistent message storage
      
      Features:
      - Stores all messages (public & private)
      - Private messages use recipient username
      - Public messages use "ALL" as recipient
      - Logs both sender and recipient IPs
      - Provides filtered history for users
      - Uses chat.db file
      
      User Management:
      - SHA-256 password hashing
      - User registration and login
      - Secure password verification
      - Unique username enforcement
      
      Schema:
      - messages: sender, sender_ip,
        recipient, recipient_ip, content, timestamp
      - users: username, password_hash,
        created_at
    end note
}

' ========== CLIENT SIDE ==========
package "Client Side" #DDDDFF {
    class ChatClient {
        {static} - PORT : int = 5001
        --
        {static} + main(String[] args) : void
    }

    class ClientGUI {
        - output : DataOutputStream
        - input : DataInputStream
        - socket : SSLSocket
        - username : String
        - intentionalClose : boolean
        {static} - SERVER_HOST : String
        {static} - PORT : int
        {static} - TIME_FORMATTER : DateTimeFormatter
        {static} - msgType_TEXT : byte = 1
        {static} - msgType_FILE : byte = 2
        --
        + start(Stage) : void
        + stop() : void
        {static} + main(String[] args) : void
    }

    class ServerListener {
        - socket : Socket
        --
        + ServerListener(Socket)
        + run() : void
    }
    
    note right of ChatClient
      Command-line client application
      Connects via SSL/TLS
      Sends user input to server
      and displays received messages
    end note

    note right of ClientGUI
      JavaFX GUI client application
      Provides modern interface
      with text area, input field,
      Send button, and File button
      Uses SSL/TLS encryption
      Binary protocol for messages
      and file transfers
      Supports silent window close
    end note

    note right of ServerListener
      Runs in separate thread
      to continuously receive
      messages from server
      (used by CLI client)
    end note
}

' Relationships within Server Side
ChatServer "1" -- "*" ClientHandler : manages >
ClientHandler ..|> Runnable : implements
ClientHandler ..> DatabaseManager : uses
ChatServer ..> DatabaseManager : uses

' Relationships within Client Side
ChatClient ..> ServerListener : creates
ServerListener ..|> Runnable : implements
ClientGUI ..> javafx.application.Application : extends

' Cross-boundary relationships
ChatClient ..> ChatServer : connects to (SSL)
ClientGUI ..> ChatServer : connects to (SSL)
ClientHandler --> ChatServer : uses

@enduml
